# nemato-hydodynamic_systems

./: CMakeLists.txt  installation_instructions.txt
src/: AuxCortexNematic2D.cpp  AuxCortexNematic2D.h  Aux_src.cpp  Aux_src.h  CortexNematic2D.cpp  circle_n1.vtk  circle_n2.vtk  circle_n3.vtk  config  src.cpp
